# clarify

./: .flake8  .gitignore  .travis.yml  AUTHORS.rst  HISTORY.rst  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.py
clarify/: __init__.py  jurisdiction.py  parser.py
clarity/: jurisdiction.py  parser.py
tests/: test_jurisdiction.py  test_parser.py
tests/data/: county.xml  precinct.xml  select-county__KY__50972__131636.html
