[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Clarify"
version = "0.6"
description = "A Python package for parsing election results from Clarity systems"
authors = [
    {name = "Derek Willis", email = "openelections@gmail.com"}
]
requires-python = ">=3.0"
dependencies = [
    "requests>=2.31.0",
    "cssselect>=1.2.0",
    "requests-futures>=1.0.1",
    "wheel>=0.40.0",
    "lxml>=4.9.0"
]

[project.urls]
Homepage = "https://github.com/openelections/clarify"